--- a/src/custom.scss
+++ b/src/custom.scss
@@ -19,5 +19,7 @@ $color-mode-type: media-query;
 @import "./../node_modules/bootstrap/scss/grid";
 @import "./../node_modules/bootstrap/scss/forms";
 @import "./../node_modules/bootstrap/scss/buttons";
+@import "./../node_modules/bootstrap/scss/nav";
+@import "./../node_modules/bootstrap/scss/badge";
 @import "./../node_modules/bootstrap/scss/helpers";
 @import "./../node_modules/bootstrap/scss/utilities/api";
