--- a/src/custom.scss
+++ b/src/custom.scss
@@ -6,8 +6,13 @@
 
 $color-mode-type: media-query;
 
+$primary: #6d29e9;
+
 @import "./../node_modules/bootstrap/scss/variables";
 @import "./../node_modules/bootstrap/scss/variables-dark";
+
+$nav-underline-link-active-color: $primary;
+
 @import "./../node_modules/bootstrap/scss/maps";
 @import "./../node_modules/bootstrap/scss/mixins";
 @import "./../node_modules/bootstrap/scss/utilities";
