--- a/src/custom.scss
+++ b/src/custom.scss
@@ -2,27 +2,27 @@
  * PassPanda | Bootstrap customization
  */
 
-@import "./../node_modules/bootstrap/scss/functions";
+@import "bootstrap/scss/functions";
 
 $color-mode-type: media-query;
 
 $primary: #6d29e9;
 
-@import "./../node_modules/bootstrap/scss/variables";
-@import "./../node_modules/bootstrap/scss/variables-dark";
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/variables-dark";
 
-@import "./../node_modules/bootstrap/scss/maps";
-@import "./../node_modules/bootstrap/scss/mixins";
-@import "./../node_modules/bootstrap/scss/utilities";
+@import "bootstrap/scss/maps";
+@import "bootstrap/scss/mixins";
+@import "bootstrap/scss/utilities";
 
-@import "./../node_modules/bootstrap/scss/root";
-@import "./../node_modules/bootstrap/scss/reboot";
-@import "./../node_modules/bootstrap/scss/type";
-@import "./../node_modules/bootstrap/scss/containers";
-@import "./../node_modules/bootstrap/scss/grid";
-@import "./../node_modules/bootstrap/scss/forms";
-@import "./../node_modules/bootstrap/scss/buttons";
-@import "./../node_modules/bootstrap/scss/nav";
-@import "./../node_modules/bootstrap/scss/badge";
-@import "./../node_modules/bootstrap/scss/helpers";
-@import "./../node_modules/bootstrap/scss/utilities/api";
+@import "bootstrap/scss/root";
+@import "bootstrap/scss/reboot";
+@import "bootstrap/scss/type";
+@import "bootstrap/scss/containers";
+@import "bootstrap/scss/grid";
+@import "bootstrap/scss/forms";
+@import "bootstrap/scss/buttons";
+@import "bootstrap/scss/nav";
+@import "bootstrap/scss/badge";
+@import "bootstrap/scss/helpers";
+@import "bootstrap/scss/utilities/api";
